# vyas-notetaking-app

./: LICENSE.txt  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-release.yml  codeql.yml
scripts/: sync-version.js
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CompareView.tsx  FontBar.tsx  MenuBar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx
src/utils/: diff.ts  formatConverter.ts  platform.ts
