[package]
name = "vyas-notetaking-app"
version = "1.2.0"
description = "Vyas: Compile your Epic"
authors = ["you"]
edition = "2021"

[lib]
name = "vyas_notetaking_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-enumeration = "0.9"
dirs = "5"
